@@ -3,7 +3,7 @@ TARGET = tst_qmltests
 CONFIG += warn_on testcase
 SOURCES += tst_qmltests.cpp
 
-QT += declarative qmltest
+QT += declarative qmltest widgets
 
 # QML files tested are the ones in WebKit source repository.
 DEFINES += QUICK_TEST_SOURCE_DIR=\"\\\"$$PWD\\\"\"
